Fix spacing between form and FAQ

--- a/ktc-web/scss/_merchant-inner-responsive.scss
+++ b/ktc-web/scss/_merchant-inner-responsive.scss
@@ -157,7 +157,7 @@
     }
   }
 
-  #section-merchant-register-form {
+  #section-merchant-register-form.form-inner-page {
     h3, h4 {
       margin-bottom: 20px;
     }
